--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/KaGen"]
 	path = external/KaGen
 	url = https://github.com/KarlsruheGraphGeneration/KaGen.git
+[submodule "external/message-queue"]
+	path = external/message-queue
+	url = https://github.com/niklas-uhl/message-queue.git
